app/css/custom.css
/* Colors */

.bg-primary {
    background-color: #f8fdff;
}

.bg-second {
    background-color: #283772;
}

.bg-thrid {
    background-color: #f1be1d;
}

.txt-primary {
    color: #283772;
}

.txt-user {
    color: #cfcfcf;
}

/* Positions */

.header-position {
    position: sticky !important;
}

.page-position {
    position: sticky !important;
}

/* Inputs */

.form-control::-webkit-input-placeholder {
    color: #dddddd !important;
}

.ext-placeholder {
    color: #dddddd;
}

.btn-outline-danger {
    border: 1px solid #d9534f !important;
}

.btn-success {
    border: 1px solid #5cb85c !important;
}

.btn-outline-success {
    border: 1px solid #5cb85c !important;
}

.btn-outline-warning {
    border: 1px solid #ffc107 !important;
}

.btn-warning {
    border: 1px solid #ffc107 !important;
}

.btn-secondary {
    border: 1px solid #dddddd !important;
    background: #dddddd;
    color: #292b2c !important;
}

.btn-danger:hover {
    background: #ffffff !important;
    color: #d9534f !important;
    border: 1px solid #d9534f !important;
}

.btn-success:hover {
    background: #ffffff !important;
    color: #5cb85c !important;
    border: 1px solid #5cb85c !important;
}

.btn-warning:hover {
    background: #ffffff !important;
    color: #ffc107 !important;
    border: 1px solid #ffc107 !important;
}

.btn-secondary:hover {
    background: #ffffff !important;
    color: #dddddd !important;
    border: 1px solid #dddddd !important;
}

.input-circle {
    border: 1px solid #cfcfcf;
    border-radius: 10px;
}

.form-control:focus {
    box-shadow: 0 1px 8px 0 #cfcfcf, 0 1px 8px 0 #cfcfcf !important;
    border: none !important;
    outline: 0px !important;
}

.image-error {
    font-size: 12px;
    color: #e2504b;
}

/* Lines */

.custom-bx {
    margin-bottom: 90px;
}

.login-line {
    width: 50vh;
    margin-left: -1.9rem;
}

.lastdaily-line {
    width: 85vh;
    margin-left: -1.9rem;
}

.help-line {
    width: 46vh;
    margin-left: -1.9rem;
}

.register-line {
    width: 120%;
    margin-left: -1.9rem;
}

.vt-line {
    padding-top: 2px;
    border-left: 8px solid #f1be1d;
    text-indent: 8px;
    color: #283772;
}

/* Menu */

.custom-icon {
    color: #f1be1d;
}

.menu-icon {
    color: #283772;
    font-size: 2rem;
}

.menu-icon:hover,
.menu-icon:active {
    cursor: pointer;
}

.menu-item {
    color: #283772;
}

.menu-align {
    display: flex;
    flex-direction: row;
    align-items: center;
    line-height: 10px;
}

.menu-item:hover,
.menu-item:active {
    color: #f1be1d;
    transition: color 0.3s;
    text-decoration: none;
    cursor: pointer;
}

/* Background */

body {
    background: #0e1e24;
}

.section-login {
    background: #f8f9fa;
}

.section-lastdaily {
    background: #f8f9fa;
}

.section-help {
    background: #f8f9fa;
}

.section-recovery {
    background: #f8f9fa;
}

.section-register {
    background: #f8f9fa;
    padding-bottom: 50px;
}

.centered {
    height: calc(100vh - 80px);
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Elements */

.card-size {
    width: 18rem;
    border: none;
    border-radius: none;
    box-shadow: 0 1px 8px 0 #0e1e24, 0 1px 8px 0 #0e1e24 !important;
}

.mt-add-daily {
    margin-top: 36px;
}

/* User menu */

.dropdown {
    cursor: pointer !important;
}

.dropbtn {
    background-color: #4caf50;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}

.align-user {
    margin-top: 7px;
    margin-right: -0.45rem;
}

/* Chatbot */

:root {
    --chat-tab-height: 40px;
    --chat-total-height: 66vh;
    --chat-input-height: 148px;

    --chat-closed-width: 300px;
    --chat-open-width: 40vw;
}

#chatbot-area {
    z-index: 999;

    border-top-left-radius: 0.25rem !important;
    border-top-right-radius: 0.25rem !important;

    height: var(--chat-total-height);
    width: var(--chat-closed-width);
    min-width: var(--chat-closed-width);

    transform: translateY(calc(var(--chat-total-height) - var(--chat-tab-height) + 1px));
    transition: transform ease-out 0.2s;

    right: 2rem;
    bottom: 0;

    background-color: var(--light);
}

@media(max-width: 600px) {
    #chatbot-area {
        right: calc(50vw - calc(var(--chat-closed-width) / 2));
    }
}

#chatbot-area.active {
    width: var(--chat-open-width);
    
    transform: translateY(0);
}

#chatbot-tab {
    border-top-left-radius: 0.25rem !important;
    border-top-right-radius: 0.25rem !important;

    height: var(--chat-tab-height);

    cursor: pointer;
}

#chatbot-tab:hover {
    background-color: #f0f1f2;
}

#chatbot-body {
    display: flex;
    flex-direction: column;
    align-items: stretch;

    height: 100%;
}

#chatbot-history {
    height: calc(var(--chat-total-height) - var(--chat-input-height));

    overflow-y: scroll;
}

#chatbot-history ul {
    padding: 0.5rem;
    margin: 0;

    display: flex;
    flex-direction: column;

    list-style-type: none;
}

/* aka message */
#chatbot-history ul li {
    border-radius: 0.25rem;

    margin: 0.25rem;
    padding: 0.6rem 0.75rem;

    max-width: 85%;

    text-align: justify;

    color: white;
}

#chatbot-history ul li[data-author='user'] {
    align-self: flex-end;

    text-align: end;

    background-color: #dba600;
}

#chatbot-history ul li[data-author='bot'] {
    align-self: flex-start;

    background-color: #283772;
}

#chatbot-history ul li a {
    color: #dba600;

    text-decoration: underline;
}

#chatbot-history ul li a:hover {
    text-decoration: none;
}

#chatbot-history ul li button {
    font-size: .75rem;
}

#chatbot-history ul li button:only-child {
    /* don't know why the offset, it just is */
    width: calc(100% - .5rem);
}

#chatbot-input {
    height: var(--chat-input-height);
}

#chatbot-history ul li .chatbot-options {
    overflow-x: scroll;
}

.msg-status{
    width:100%;
    margin-left: 15px;
    margin-right: 15px;
}

#table-container td, #table-container th{
    word-break: break-word;
}

#chatbot-history ul li .card {
    color: var(--dark);
}

